Fixed h1/h2 spacing to look better

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,8 +30,13 @@ h2 {
   font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
+h1 {
+  font-size: 40px;
+}
+
 h2 {
   color: #4aaaa5;
+  font-size: 20px;
 }
 
 p, footer, a {
